Solve flex wrap problem

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -5,6 +5,6 @@
 
     .content {
         display: flex;
-        flex: 1 0 auto;
+        flex: 1 0;
     }
 }
